--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weight Tracker</title>
-  <link rel="stylesheet" href="src/css/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weight Tracker</title>
+    <link rel="stylesheet" href="src/css/styles.css" />
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <h1>Weight Tracker</h1>
 
     <!-- Input Section -->
-    <input type="date" id="dateInput">
-    <input type="number" id="weightInput" inputmode="decimal" step="0.01" placeholder="Enter your weight (kg)">
+    <input type="date" id="dateInput" />
+    <input type="number" id="weightInput" inputmode="decimal" step="0.01" placeholder="Enter your weight (kg)" />
     <button id="logWeight">Log Weight</button>
 
     <!-- Weight History Table -->
     <h2>Weight History</h2>
-    <table id="weightTable">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Weight (kg)</th>
-        </tr>
-      </thead>
-      <tbody id="weightTableBody"></tbody>
-    </table>
-  </div>
-  <script src="src/js/script.js"></script>
+    <div class="table-container">
+        <div id="exportContainer">
+            <table id="weightTable">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Weight (kg)</th>
+                </tr>
+                </thead>
+                <tbody id="weightTableBody"></tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- Export Button -->
+    <button id="exportPDF">Export to PDF</button>
+</div>
+
+<!-- Include html2pdf.js from CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+<script src="src/js/script.js"></script>
 </body>
 </html>
