--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Weight Tracker</h1>
+    
+    <h1>PK Weight Tracker</h1>
 
     <!-- Input Section -->
     <input type="date" id="dateInput" />
