--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <div class="container">
-    
-    <h1>PK Weight Tracker</h1>
+    <h1>Weight Tracker</h1>
 
     <!-- Input Section -->
     <input type="date" id="dateInput" />
@@ -33,7 +32,8 @@
     </div>
 
     <!-- Export Button -->
-    <button id="exportPDF">Export to PDF</button>
+    <button id="exportJSON">Export JSON</button>
+<!--    <button id="exportPDF">Export to PDF</button>-->
 </div>
 
 <!-- Include html2pdf.js from CDN -->
