--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Export Button -->
     <button id="exportJSON">Export JSON</button>
-<!--    <button id="exportPDF">Export to PDF</button>-->
+    <button id="exportPDF">Export to PDF</button>
 </div>
 
 <!-- Include html2pdf.js from CDN -->
